--- a/css/styles.css
+++ b/css/styles.css
@@ -14,53 +14,54 @@ body {
     align-items: center;
     background-color: #76c1ff;
 }
-
-.form-header h1 {
-    margin: 2rem 0rem;
-}
-
 .form-header p {
+    margin-bottom: 2rem;
+}
+.form-header h1 {
     margin: 1rem 0rem;
 }
 
 .form-header h1::after {
     content: '';
-    display: flex;
-    width: 3rem;
-    height: 0.3rem;
+    display: block;
+    width: 2.4rem;
+    height: 0.2rem;
     background-color: #76c1ff;
     margin: 0 auto;
     position: absolute;
-    border-radius: 5px;
+    border-radius: 10px;
 }
-
 .form {
-    padding: 8rem;
+    padding: 5rem;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 50vh;
     display: flex;
     background-color: white;
     border-radius: 10px;
 }
 
 .form-header {
-    margin-bottom: 0rem;
+    margin-bottom: 4rem;
     display: flex;
     justify-content: space-between;
+    justify-content: center;
 }
 
 .email-button button {
-    background-color: #76c1ff;
-    outline: none;
-    width: 30vw;
-    height: 5vh;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 1px 1px 5px #0000001c;
-    font-size: 0.8rem; 
-}
+        width: 100%;
+        margin-top: 0.4rem;
+        border: none;
+        background-color: #76c1ff;
+        padding: 0.62rem;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        font-size: 0.93rem;
+        font-weight: 500;
+        color: #fff;
+    }
 
 .email-button button a {
     text-decoration: none;
@@ -72,13 +73,37 @@ body {
 }
 
 .input-box input {
-    margin-bottom: 1rem;
     outline: none;
     padding-left: 10px;
-    width: 30vw;
+    width: 20vw;
     height: 5vh;
     border: none;
     border-radius: 5px;
     box-shadow: 1px 1px 5px #0000001c;
-    font-size: 0.8rem; 
+    font-size: 0.8rem;
+}
+
+@media screen and (max-width: 1024px) {
+    .form-image {
+        display: none;
+    }
+
+    .form {
+        width: 93%;
+    }
+
+@media screen and (max-width: 580px) {
+    .input-box{
+        width: 100%;
+        justify-content: center;
+        align-items: center; 
+        flex-direction: row;
+        display: grid;
+        
+}
+.input-box input {
+    width: 40vh;
+}
+
+    }
 }
